--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,8 @@
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
 
+    --brand: 32 38% 49%;
+
     --card: 0 0% 100%;
     --card-foreground: 0 0% 3.9%;
 
